# polymarket-api

./: Cargo.toml  README.md  TODO.md  lefthook.yml
fixtures/: market.json  orderbook.json
src/: constants.rs  errors.rs  ext.rs  lib.rs  types.rs
src/errors/: duplicate_outcome_error.rs
src/ext/: alloy.rs  time.rs
src/ext/alloy/: address.rs
src/ext/alloy/uint/: serde.rs
src/ext/time/: duration_in_seconds_visitor.rs  rfc3339_visitor.rs  timestamp_visitor.rs
src/functions/: get_all.rs
src/types/: amount.rs  bid_ask_cross_error.rs  book.rs  book_params.rs  client.rs  condition_id.rs  fee.rs  market.rs  market_raw.rs  next_cursor.rs  order_summary.rs  order_type.rs  orderbook.rs  payload.rs  payload_iterator.rs  price.rs  question_id.rs  rewards.rs  rewards_rate.rs  rewards_raw.rs  side.rs  string_rfc3339.rs  token.rs  token_id.rs  tokens.rs  total.rs
tests/: get_markets.rs  get_orderbooks.rs
