[package]
name = "polymarket-api"
version = "0.1.0"
edition = "2021"
description = "Polymarket API client"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/polymarket-api"
repository = "https://github.com/DenisGorbachev/polymarket-api"
readme = "README.md"
keywords = ["polymarket", "api"]
categories = ["api-bindings"]

[package.metadata.details]
title = "Polymarket API client"
tagline = ""
summary = ""
announcement = ""

[dependencies]
alloy = { version = "0.4.2", default-features = false, features = ["std", "serde"] }
async-stream = { version = "0.3.6" }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = { version = "0.3.30" }
reqwest = { version = "0.12.8", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "macros"] }
url = { version = "2.5.2", features = ["serde"] }
